# amway-ccs-tracker

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  build_installer.ps1
docs/: INSTALL.md  SYSTEM_ANALYSIS.md  TEST_REPORT.md
docs/superpowers/plans/: 2026-06-01-todo-list.md  2026-06-04-advance-payments.md  2026-06-04-todo-done-logs-activity.md  2026-06-05-meetings-attendance.md  2026-06-11-recurring-todos.md  2026-06-12-contactless-todo-log-history.md  2026-06-12-dashboard-improvements.md  2026-06-12-db-backup-restore.md  2026-06-12-promo-downloader.md  2026-06-12-windows-installer.md  2026-06-13-me-contact-in-todo.md
docs/superpowers/specs/: 2026-06-01-todo-list-design.md  2026-06-02-abo-followup-column-design.md  2026-06-02-todo-form-layout-design.md  2026-06-02-todo-search-layout-design.md  2026-06-04-advance-payment-design.md  (+9 more)
installer/: amway_ccs_tracker.iss  prerequisites.txt
src/: app.rs  backup.rs  error.rs  main.rs  promo.rs
src/db/: mod.rs  queries.rs  schema.rs
src/models/: activity.rs  advance.rs  contact.rs  enums.rs  followup.rs  meeting.rs  mod.rs  todo.rs  todo_schedule.rs
src/ui/: abo_list.rs  activities.rs  activity_kinds.rs  activity_log.rs  advance_collect.rs  advances.rs  confirm.rs  customer_list.rs  dashboard.rs  downline_tree.rs  followup.rs  forms.rs  meeting_form.rs  meetings.rs  mod.rs  promo_download.rs  prospect_list.rs  rank_advisor.rs  settings_backup.rs  todo.rs  todo_done.rs  todo_schedules.rs
src/utils/: mod.rs  scoring.rs
tools/icon/: make_icon.py
tools/promo_downloader/: download_promotions.py
