[package]
name = "amway_ccs_tracker"
version = "0.1.0"
edition = "2021"
description = "Amway CCS Prospect & Downline Tracker"
authors = ["Amway CCS Tracker"]
# PolyForm Noncommercial 1.0.0 is not an SPDX/OSI licence, so point at the file
# directly and keep the crate off the public crates.io registry.
license-file = "LICENSE.md"
publish = false

[dependencies]
eframe = "0.28"
egui = "0.28"
egui_extras = { version = "0.28", features = ["datepicker"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
png = "0.17"

[profile.release]
opt-level = 2
codegen-units = 1
